--- a/Front/css/main.css
+++ b/Front/css/main.css
@@ -49,4 +49,17 @@ h1, h2, h3{
     line-height: 75px;
     text-align: center;
     padding: 4em 6em;
+    padding-bottom: 0;
+}
+
+.btn{
+    text-decoration: none;
+    font-family: 'Kanit';
+    font-weight: 700;
+    font-size: 1.5em;
+}
+
+.btn_border{
+    color: #f2f2f2;
+
 }
