--- a/Front/css/main.css
+++ b/Front/css/main.css
@@ -57,9 +57,177 @@ h1, h2, h3{
     font-family: 'Kanit';
     font-weight: 700;
     font-size: 1.5em;
+    display: inline-block;
+    margin: auto;
+    padding: 5px 40px;
+}
+
+.btn, a{
+    transition: .4s;
 }
 
 .btn_border{
     color: #f2f2f2;
+    border: solid 2px #f2f2f2;
+}
 
+#banner .btn{
+    padding: 5px 90px;
+}
+
+.btn_border:hover{
+    background: #f2f2f2;
+    color: #000;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+#banner .btn{
+    margin-bottom: 6em;
+}
+
+.container{
+    padding: 4em;
+}
+
+#sobre .column:nth-child(2){
+    width: 60%;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+}
+
+#sobre img{
+    margin-bottom: 3em;
+}
+
+#sobre h1{
+    font-size: 46px;
+    line-height: 69px;
+    margin: 0;
+}
+
+#sobre h1::before{
+    content: '';
+    height: 45px;
+    width: 5px;
+    background-color: #5465FF;
+    display: inline-block;
+    position: relative;
+    bottom: -12px;
+    margin-right: .3em;
+    border-radius: 5px 0 0 5px;
+}
+
+#sobre p{
+    font-size: 1.2em;
+}
+
+.container .row{
+    align-items: center;
+}
+
+.card{
+    width: 25%;
+    text-align: center;
+    padding: 2em;
+    height: 100%;
+}
+
+#pratico{ border: solid 4px #71B340; }
+
+#sustentavel{ border: solid 4px #FFFA01; }
+
+#moderno{ border: solid 4px #009DDC; }
+
+.card p{
+    height: 5em;
+}
+
+#cards small{
+    margin-top: 1em;
+}
+
+.line_after{
+    font-size: 47px;
+    text-align: center;
+}
+
+.line_after::after{
+    display: block;
+    content: '';
+    background: #5465FF;
+    height: 7px;
+    width: 25%;
+    margin: .5em auto;
+}
+
+#aluguel{
+    text-align: center;
+}
+
+#aluguel p{
+    margin-top: 4em;
+}
+
+input, textarea{
+    outline: none;
+    padding: .5em 1em;
+    border-radius: 8px;
+    margin: 1em 0;
+    font-family: 'Manrope';
+    font-weight: 600;
+    color: #333;
+    resize: none;
+    border: solid 1px #3B3D45;
+}
+
+#aluguel input{
+    width: 60%;
+}
+
+#aluguel img{
+    margin: 4em 0;
+}
+
+#contato {
+    background-image: url('../img/wave.svg');
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 15em;
+}
+
+#contato form{
+    width: 50%;
+}
+
+#contato form input, #contato form textarea{
+    width: 100%;
+}
+
+label{
+    display: block;
+}
+
+#contato .line_after::after{
+    background-color: #3B3D45;
+}
+
+.btn_black{
+    background: #3B3D45;
+    color: #F2F2F2;
+    border: solid 4px #3B3D45;
+}
+
+.btn_black:hover{
+    border: solid 4px #3B3D45;
+    background: #f2f2f2;
+    color: #3B3D45;
+}
+
+#contato .btn{
+    margin-top: 1em;
 }
