--- a/Front/css/main.css
+++ b/Front/css/main.css
@@ -147,6 +147,7 @@ h1, h2, h3{
 
 #cards small{
     margin-top: 1em;
+    width: 100%;
 }
 
 .line_after{
@@ -181,6 +182,7 @@ input, textarea{
     color: #333;
     resize: none;
     border: solid 1px #3B3D45;
+    box-sizing: border-box;
 }
 
 #aluguel input{
@@ -230,4 +232,125 @@ label{
 
 #contato .btn{
     margin-top: 1em;
+}
+
+@media screen and (max-width: 1300px) {
+    #aluguel img{
+        width: 100%;
+    }
+
+    #bg_banner h1{
+        padding: 4em;
+        padding-bottom: 0;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    #bg_banner h1{
+        padding: 8em 2em;
+        padding-bottom: 0;
+    }
+
+    #bg_banner{
+        min-height: 900px;
+    }
+
+    .container .row{
+        justify-content: center;
+    }
+
+    #sobre .row{
+        flex-direction: column-reverse;
+    }
+
+    #sobre .column:nth-child(2){
+        width: 100%;
+        margin-bottom: 4em;
+    }
+
+    .card{
+        /* padding: 1em; */
+        /* min-height: fit-content; */
+        width: 50%;
+        margin-bottom: 2em;
+    }
+
+    .card p {
+        height: 8em;
+    }
+
+    .card img{
+        width: 30%;
+    }
+
+    #cards small{
+        text-align: center;
+    }
+
+    #contato form{
+        width: 100%;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media screen and (max-width: 768px) {
+    #bg_banner h1 {
+        padding: 7em 1em;
+        padding-bottom: 0;
+        font-size: 2.5em;
+        line-height: normal;
+    }
+
+    #banner .btn {
+        padding: 5px 50px;
+    }
+
+    .line_after{
+        font-size: 35px;
+    }
+
+    .card{
+        width: 100%;
+    }
+
+    .card p {
+        height: auto;
+    }
+
+    #aluguel input {
+        width: 100%;
+    }
+        
+}
+
+@media screen and (max-width: 600px){
+    .container {
+        padding: 2em;
+    }
+
+    #contato .btn {
+        margin-top: 1em;
+        margin-bottom: 2em;
+    }
+
+    #sobre img {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #bg_banner h1 {
+        font-size: 2em;
+        line-height: 1.3em;
+        padding: 10em 1em;
+        padding-bottom: 0;
+    }
+
+    #bg_banner {
+        min-height: 800px;
+    }
+
+    footer h2{
+        margin-bottom: 0;
+    }
 }
