--- a/Front/css/header_footer.css
+++ b/Front/css/header_footer.css
@@ -95,9 +95,9 @@ a.active{
 }
 
 header .btn{
-    background: -webkit-linear-gradient(90deg, #AD7449 -9.09%, #D18B57 109.44%);
+    background: #5465FF;
     width: 20%;
-    border-radius: 0 50px 50px 0;
+    border-radius: 0;
     height: 38px;
     position: relative;
     top: -2px;
@@ -105,6 +105,7 @@ header .btn{
     transition: .3s;
     margin: 0;
     cursor: pointer;
+    border-style: none;
 }
 
 .btn:hover{ opacity: .8; }
@@ -121,8 +122,8 @@ header .btn{
     cursor: pointer;
     position: relative;
     display: block;
-    height: 22px;
-    width: 30px;
+    height: 30px;
+    width: 40px;
 }
 
 .hamburguer label span{
@@ -137,20 +138,20 @@ header .btn{
 
 .hamburguer label span:nth-child(1){ top: 0; }
   
-.hamburguer label span:nth-child(2){ top: 8px; }
+.hamburguer label span:nth-child(2){ top: 12.5px; }
   
-.hamburguer label span:nth-child(3){ top: 16px; }
+.hamburguer label span:nth-child(3){ bottom: 0; }
 
 #menu:checked + .hamburguer button label span:nth-child(1){
     transform: rotate(45deg);
-    top: 8px;
+    top: 12px;
 }
 
 #menu:checked + .hamburguer button label span:nth-child(2){ opacity: 0; }
   
 #menu:checked + .hamburguer button label span:nth-child(3){
     transform: rotate(-45deg);
-    top: 8px;
+    top: 12px;
 }
 
 footer{
@@ -180,13 +181,6 @@ footer p{
 @media screen and (max-width: 992px) {
     header ul{ display: none; }
     header section{ display: none; }
-    header .search input{ display: none; }
-
-    .search {
-        width: fit-content;
-        height: fit-content;
-        border: none;
-    }
 
     header .btn img, .hamburguer span{
         width: 35px;
@@ -194,10 +188,9 @@ footer p{
     }
 
     header .btn{
-        width: 50px;
-        border-radius: 7px;
+        width: 70px;
         padding: 7px;
-        height: 50px;
+        height: 70px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -212,19 +205,34 @@ footer p{
     .logo{
         font-size: 80px;
         line-height: 112.61px;
+        margin: 0;
     }
 
-    header, footer{ padding: 2rem; }
+    header{
+        flex-direction: column;
+        background: rgba(59, 61, 69, .97);
+    }
 
-    .hamburguer{ display: block; }
+    nav.row.btns_menu {
+        align-self: baseline;
+        width: 100%;
+    }
+
+    /* header, footer{ padding: 2rem; } */
+
+    .hamburguer{ 
+        display: block;
+        margin-left: auto;
+    }
 
     #menu:checked ~ ul{
         display: flex !important;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 70px;
-        gap: 15px
+        margin-top: -50px;
+        gap: 10px;
+        width: 100%;
     }
 
     header ul li{
@@ -232,23 +240,13 @@ footer p{
         text-align: center;
     }
 
-    header ul li:not(:last-of-type){
-        border-bottom: solid 2px #bbb;
-        padding-bottom: 15px;
-    }
-
     header ul li a{
         font-size: 2em;
     }
-
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media screen and (max-width: 768px) {
-    .links_uteis{
-        display: none;
-    }
-
     footer .row{
         justify-content: center;
     }
@@ -261,10 +259,28 @@ footer p{
     }
 
     header, footer{
-        padding: 1rem;
+        padding: 2rem;
     }
 
     header ul li a {
         font-size: 1.5em;
+    }
+
+    header .btn {
+        width: 50px;
+        height: 50px;
+    }
+
+    .hamburguer label{
+        height: 20px;
+        width: 30px;
+    }
+
+    .hamburguer label span:nth-child(2) {
+        top: 7.4px;
+    }
+
+    #menu:checked + .hamburguer button label span{
+        top: 8px !important;
     }
 }
