--- a/Front/css/login_cadastro.css
+++ b/Front/css/login_cadastro.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 12vh;
+    padding-top: 10em;
 }
 
 .wrap_form{
@@ -13,8 +13,8 @@
     width: 65vw;
     display: flex;
     justify-content: space-between;
-    background: #5465FF;
-    border: 1px solid #5465FF;
+    background: #5465ff34;
+    /* border: 1px solid #5465FF; */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
 }
@@ -45,9 +45,9 @@ h2{
 .wrap_form small::after{
     width: 130px;
     content: '';
-    background: linear-gradient(90deg, #AD7449 -9.09%, #D18B57 109.44%);
+    background: #5465FF;
     display: block;
-    height: 3px;
+    height: 3.5px;
     margin: 10px auto;
 }
 
@@ -61,13 +61,14 @@ input{
     border-style: none !important;
     width: 85%;
     box-sizing: border-box;
-    padding: 2px 7px !important;
+    padding: 0;
+    padding-right: 10px !important;
 }
  
 .wrap_input img{
     display: inline-block;
     width: 5%;
-    margin: 0 15px;
+    margin: 0 10px;
     height: fit-content;
 }
 
@@ -85,6 +86,11 @@ label{
     display: flex;
     align-items: center;
     background-color: #fff;
+    margin-bottom: 0;
+}
+
+.erro{
+    width: 100%;
 }
 
 .btn{
@@ -97,11 +103,12 @@ label{
     margin-top: 1rem;
     display: block;
     text-align: end;
-    color: #333;
+    color: #f2f2f2;
+    text-decoration: none
 }
 
 .outros_links strong{
-    color: #AD7449;
+    color: #5465FF;
     text-decoration: none;
 }
 .btn{
@@ -129,13 +136,15 @@ label{
     height: 25px;
     display: inline-block;
     background-position: center;
+    /* filter: invert(1); */
 }
 
 .arrow::after{ background: url('../img/icons/icon_arrow_right.svg') center / contain; }
 
 
 input, textarea {
-    margin: 1em 0;
+    margin: .5em 0;
+    border-radius: 0px;
 }
 
 @media screen and (max-width: 1400px) {
