--- a/Front/css/main.css
+++ b/Front/css/main.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Kanit:300,400,500i,600,700,800,900,900i&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Audiowide&display=swap');
 
+html { scroll-behavior: smooth; }
+
 body{
     background: #3B3D45;
     margin: 0;
@@ -64,6 +66,8 @@ h1, h2, h3{
     margin: auto;
     padding: 5px 40px;
     text-transform: uppercase;
+    cursor: pointer;
+    user-select: none;
 }
 
 .btn, a{
@@ -278,6 +282,7 @@ label{
     display: none;
     text-align: start;
     font-size: .8em;
+    font-weight: 600;
 }
 
 .sucesso{
@@ -286,6 +291,10 @@ label{
 
 .erro{
     color: #FF4545;
+}
+
+#contato .erro{
+    color: #282C55;
 }
 
 @media screen and (max-width: 1300px) {
